[gd_scene load_steps=7 format=3 uid="uid://d303vkpxby4mv"]

[ext_resource type="Script" path="res://Scripts/Drag Drop/DD_GridController.gd" id="1_t2g7b"]
[ext_resource type="Texture2D" uid="uid://d075jsnfwo34e" path="res://Assets/Sprites/nS_MenuBack.png" id="2_1nv8u"]
[ext_resource type="PackedScene" uid="uid://dbbcx5od128lp" path="res://Scenes/Drag Drop/DD_GridTile.tscn" id="3_srxsh"]
[ext_resource type="Texture2D" uid="uid://dihc4ted4eodb" path="res://Assets/Sprites/icon.svg" id="4_7org5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84uk0"]
bg_color = Color(0.682353, 0.521569, 0, 0.196078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyhym"]
bg_color = Color(1, 0.341176, 0.305882, 0.196078)

[node name="PanelContainer" type="PanelContainer"]
texture_filter = 1
scale = Vector2(1, 0.997162)
mouse_filter = 1
script = ExtResource("1_t2g7b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = -8
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = -8
theme_override_constants/margin_bottom = -8

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_1nv8u")
region_rect = Rect2(0, 0, 25, 25)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 6

[node name="TextureRect" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect2" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect3" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect4" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect5" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect6" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect7" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect8" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect9" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect10" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect11" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect12" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect13" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect14" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect15" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect16" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect17" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect18" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect19" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect20" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect21" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect22" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect23" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect24" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect25" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect26" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect27" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect28" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect29" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect30" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect31" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect32" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect33" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect34" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect35" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="TextureRect36" parent="GridContainer" instance=ExtResource("3_srxsh")]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_7org5")

[node name="Hover Panel Seperator" type="Node" parent="."]

[node name="Hover Panel" type="Panel" parent="Hover Panel Seperator"]
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_84uk0")

[node name="Bad Hover Panel" type="Panel" parent="Hover Panel Seperator"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xyhym")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered_inventory_grid"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited_inventory_grid"]
